--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Revision history for Perl distribution CPAN-Testers-Data-Addresses
 ==================================================================
 
+0.02	current
+	- added counters to update
+	- removed debugging statements
+	- added further address matching comparisons
+
 0.01	22/11/2009
 	- initial release
