POD and SQL updates

--- a/README
+++ b/README
@@ -49,7 +49,7 @@ RT: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Addresses
 
 AUTHOR & COPYRIGHT
 
-  Copyright (C) 2009,2010 Barbie <barbie@cpan.org>
+  Copyright (C) 2009-2012 Barbie <barbie@cpan.org>
 
 LICENCE
 
