--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 Revision history for Perl distribution CPAN-Testers-Data-Addresses
 ==================================================================
 
+0.07	08/04/2012
+	- fixed POD error in supplementary script.
+
 0.06	13/08/2010
         - file removal test doesn't work on Windows :(
 
