--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Revision history for Perl distribution CPAN-Testers-Data-Addresses
 
 0.07	08/04/2012
 	- fixed POD error in supplementary script.
+	- updated SQL to include fulldate.
 
 0.06	13/08/2010
         - file removal test doesn't work on Windows :(
