--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl distribution CPAN-Testers-Data-Addresses
 ==================================================================
 
+0.09    2012-11-18
+        - test plan fixes.
+
 0.08    2012-11-04
         - spelling fixes. (thanks to Florian Schlichting & Gregor Herrmann).
         - CHANGES to Changes.
