--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl distribution CPAN-Testers-Data-Addresses
 
         - added testerid, guid & fulldate to file format, so we can update the
           ixaddress entries too.
+        - map against tester's display name.
 
         - script updates:
         -- bin/addresses.pl - '--update' option requires a file.
