added some example shell scripts

--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Revision history for Perl distribution CPAN-Testers-Data-Addresses
         - script updates:
         -- bin/addresses.pl - '--update' option requires a file.
         -- examples/addresses-parser.pl - added ability to update db.
+        -- added some example command lines via shell scripts.
 
 0.10    2012-11-25
         - File::Spec is rarely the right answer. Removed.
