--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl distribution CPAN-Testers-Data-Addresses
 ==================================================================
 
+        - fixed license fields in META.json to be lists.
+
 0.12    2013-08-07
         - forgot to update the skip value in tests :(
 
