--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
-Revision history for Perl distribution CPAN-Testers-Data-Addresses
-==================================================================
+Revision history for CPAN-Testers-Data-Addresses
+================================================
 
+0.13    2014-09-10
         - fixed license fields in META.json to be lists.
         - extended test suite.
         - added more process tests.
