--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for CPAN-Testers-Data-Addresses
 ================================================
 
         - fixed skip numbers.
+        - added version option.
 
 0.13    2014-09-10
         - fixed license fields in META.json to be lists.
